Fixed bug where the first tab created would stay selected

--- a/enaml/qt/editor/tab_ace_test.html
+++ b/enaml/qt/editor/tab_ace_test.html
@@ -106,6 +106,7 @@
 		}
 
 		tab_list.current_tab = jQuery('li', tab_list)[0];
+		tab_list._old_tab = tab_list._current_tab
 		jQuery('#add_button').click(addTabItem);
 
 		editor.setSession(sessions[0]);
