--- a/enaml/qt/editor/editor.html
+++ b/enaml/qt/editor/editor.html
@@ -1,157 +1,157 @@
 <style>
-	#editor_${column} { 
-		float: left;
+	#editor_${column} {
 	    position: relative;
-	    height: 96%;
 	    width: 100%;
 	    background-color: #fff;
+	    height: 95%;
 	}
 </style>
-
-<div class="tabs">
-	<ul class="tab_list">
-		<li data-sessionid="initial"></li>
-	</ul>
+<div class="container">
+	<div class="tabs">
+		<div data-sessionid="initial"></div>
+	</div>
 	<button class="add_button">+</button>
+	<div id="editor_${column}"></div>
 </div>
-<div id="editor_${column}"></div>
 
 <script type="text/javascript">
-    var EditSession = require('ace/edit_session').EditSession
-	var editor = ace.edit("editor_${column}");
-	var tab_list = jQuery('.tab_list');
-	tab_list.sortable({
-		helper: 'clone',
-		scroll: false,
-		distance: 15,
-	});
+	var Editor_${column} = new function(){
+		var _this = this;
+	    var EditSession = require('ace/edit_session').EditSession;
+		this.editor = ace.edit("editor_${column}");
+		this.tab_list = jQuery(jQuery('.tabs')[${column}]);
+		this.tab_list.sortable({
+			tolerance: 'pointer',
+			helper: 'clone',
+			scroll: false,
+			distance: 15
+		});
 
-	var sessions = {
-		'initial' : new EditSession("")
-	}
+		this.sessions = {
+			'initial' : new EditSession("")
+		};
 
-	tab_list.__defineSetter__("current_tab", function(tab) {
-		jQuery(tab).addClass('current');
-		this._current_tab = tab
-	});
+		this.tab_list.__defineSetter__("current_tab", function(tab) {
+			jQuery(tab).addClass('current');
+			this._current_tab = tab;
+		});
 
-	tab_list.__defineGetter__("current_tab", function() {
-		return this._current_tab
-	});
+		this.tab_list.__defineGetter__("current_tab", function() {
+			return this._current_tab;
+		});
 
-	tab_list.__defineSetter__("old_tab", function(tab) {
-		jQuery(tab).removeClass('current');
-		this._old_tab = tab
-	});
+		this.tab_list.__defineSetter__("old_tab", function(tab) {
+			jQuery(tab).removeClass('current');
+			this._old_tab = tab;
+		});
 
-	tab_list.__defineGetter__("old_tab", function() {
-		return this._old_tab
-	});
+		this.tab_list.__defineGetter__("old_tab", function() {
+			return this._old_tab;
+		});
 
-	function setTitle(title) {
-		jQuery(tab_list.current_tab).text(title)
-	}
+		this.setTitle = function(title) {
+			jQuery(jQuery('span', _this.tab_list.current_tab)[0]).text(title);
+		}
 
-	function removeTabItem() {
-		/* handler for when the 'x' on a tab is clicked
+		this.removeTabItem = function() {
+			/* handler for when the 'x' on a tab is clicked
 
-		*/
-		li_list = jQuery('li', tab_list);
-		item = jQuery(this).parent();
-		if (item.attr('data-sessionid') == 
-			jQuery(tab_list.current_tab).attr('data-sessionid')) {
-			if (li_list.index(item) == li_list.length-1) {
-				tab_list.current_tab = item.prev();
+			*/
+			li_list = jQuery('div', _this.tab_list);
+			item = jQuery(this).parent();
+			if (item.attr('data-sessionid') == 
+				jQuery(_this.tab_list.current_tab).attr('data-sessionid')) {
+				if (li_list.index(item) == li_list.length-1) {
+					_this.tab_list.current_tab = item.prev();
+				}
+				else
+					_this.tab_list.current_tab = item.next();
+
+				if (_this.tab_list.current_tab.length == 0) {
+					_this.tab_list.current_tab = null;
+					_this.editor.setSession(new EditSession(""));
+					jQuery(this).parent().remove();
+					delete _this.sessions[item.attr('data-sessionid')];
+					return
+				}
 			}
-			else
-				tab_list.current_tab = item.next();
+			s = _this.sessions[jQuery(_this.tab_list.current_tab).attr('data-sessionid')];
+			_this.editor.setSession(s);
+
+			jQuery(this).parent().remove();
+			delete _this.sessions[item.attr('data-sessionid')];
 		}
-		s = sessions[jQuery(tab_list.current_tab).attr('data-sessionid')]
-		editor.setSession(s);
 
-		jQuery(this).parent().remove();
-		delete sessions[item.attr('data-sessionid')];
+		this.generateId = function() {
+			/* Generate a random 32 character id
 
-		li_list = jQuery("li", tab_list);
-
-		if (li_list.length == 1) {
-			jQuery('button', li_list).hide();
-			tab_list.sortable('disable');
+			*/
+			var result = '';
+			for(var j=0; j<32; j++) {
+				var i = Math.floor(Math.random()*16).toString(16).toUpperCase();
+				result = result + i;
+			}
+			return result;
 		}
-	}
 
-	function generateId() {
-		/* Generate a random 32 character id
+		this.addTabItem = function(title) {
+			/* Handler for when the '+' button is clicked
 
-		*/
-		var result = '';
-		for(var j=0; j<32; j++) {
-			var i = Math.floor(Math.random()*16).toString(16).toUpperCase();
-			result = result + i;
+			*/
+			if (typeof(title) !== String)
+				title = 'Untitled';
+
+			div_list = jQuery('div', _this.tab_list);
+			div = document.createElement('div');
+			div.innerHTML = title;
+			var id = _this.generateId();
+			jQuery(div).attr('data-sessionid', id);
+			if (_this.tab_list.current_tab == null) {
+				jQuery(div).addClass("current")
+				_this.tab_list.current_tab = div
+			}
+			_this.tab_list.append(div);
+			_this.setupTab(div);
+			_this.sessions[id] = new EditSession('');
 		}
-		return result
-	}
 
-	function addTabItem(title) {
-		/* Handler for when the '+' button is clicked
+		this.clickTabItem = function() {
+			/* Handler for when a tab is clicked
 
-		*/
-		if (typeof(title) !== String)
-			title = 'Untitled'
-
-		li_list = jQuery('li', tab_list);
-		if (li_list.length == 1) {
-			jQuery('button', li_list[0]).show();
-			tab_list.sortable('enable');
+			*/
+			var id = jQuery(this).attr("data-sessionid");
+			var session = _this.sessions[id];
+			if (jQuery(this) != _this.tab_list.current_tab) {
+				_this.editor.setSession(session);
+				_this.tab_list.old_tab = _this.tab_list.current_tab;
+				_this.tab_list.current_tab = jQuery(this);
+			}
 		}
-		li = document.createElement('li');
-		li.innerHTML = title
-		var id = generateId();
-		jQuery(li).attr('data-sessionid', id);
-		tab_list.append(li)
-		setupTab(li);
-		sessions[id] = new EditSession('')
-	}
 
-	function clickTabItem() {
-		/* Handler for when a tab is clicked
+		this.setupTab = function(tab) {
+			/* Sets up a tab by wrapping the text in a span and
+			adding the close button
 
-		*/
-		var id = jQuery(this).attr("data-sessionid");
-		var session = sessions[id];
-		if (jQuery(this) != tab_list.current_tab) {
-			editor.setSession(session);
-			tab_list.old_tab = tab_list.current_tab
-			tab_list.current_tab = jQuery(this);
+			*/
+			jQuery(tab).click(_this.clickTabItem);
+			jQuery(tab).wrapInner("<span />");
+			var button = document.createElement('button');
+			button.innerHTML = "x";
+			jQuery(button).click(_this.removeTabItem);
+			jQuery(button).insertAfter(jQuery('span', tab)[0]);
 		}
-	}
 
-	function setupTab(tab) {
-		/* Sets up a tab by wrapping the text in a span and
-		adding the close button
+		this.tab_list.current_tab = jQuery('div', this.tab_list)[0];
+		this.tab_list._old_tab = this.tab_list.current_tab;
+ 		jQuery(jQuery('.add_button')[${column}]).click(this.addTabItem)
+		this.editor.setSession(this.sessions['initial']);
 
-		*/
-		jQuery(tab).click(clickTabItem);
-		var span = document.createElement('span');
-		jQuery(tab).wrapInner(span);
-		var button = document.createElement('button');
-		button.innerHTML = "x";
-		if (jQuery('li', tab_list).length == 1)
-			jQuery(button).hide();
-		jQuery(button).insertAfter(jQuery('span', tab)[0]);
-		jQuery(button).click(removeTabItem);
-	}
+		var item_list = jQuery('div', this.tab_list);
+		for (var i=0; i<item_list.length; i++) {
+			this.setupTab(item_list[i]);
+		}
 
-	var item_list  = jQuery('li', tab_list);
-	for (var i=0; i<item_list.length; i++) {
-		setupTab(item_list[i]);
-	}
-
-	tab_list.current_tab = jQuery('li', tab_list)[0];
-	tab_list._old_tab = tab_list.current_tab
-	jQuery('.add_button').click(addTabItem);
-	editor.setSession(sessions['initial']);
-
-	${events}
-	${bindings}
+		${events}
+		${bindings}
+	}();
 </script>
